--- a/PirateHandbook/Base.lproj/Main.storyboard
+++ b/PirateHandbook/Base.lproj/Main.storyboard
@@ -89,13 +89,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="brV-7X-jKq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1kQ-zC-p0d"/>
-                            <constraint firstItem="yrP-or-1Fg" firstAttribute="trailing" secondItem="brV-7X-jKq" secondAttribute="trailing" priority="999" constant="20" id="CXz-6M-2Um"/>
+                            <constraint firstItem="xrq-h9-VTU" firstAttribute="trailing" secondItem="brV-7X-jKq" secondAttribute="trailing" priority="999" constant="20" id="CXz-6M-2Um"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6eG-YA-K9i" secondAttribute="trailing" id="Htl-Y1-78D"/>
-                            <constraint firstItem="brV-7X-jKq" firstAttribute="leading" secondItem="yrP-or-1Fg" secondAttribute="leading" constant="20" id="M4C-AG-31p"/>
-                            <constraint firstItem="yrP-or-1Fg" firstAttribute="bottom" secondItem="6eG-YA-K9i" secondAttribute="bottom" constant="20" id="VKV-hf-pBw"/>
+                            <constraint firstItem="brV-7X-jKq" firstAttribute="leading" secondItem="xrq-h9-VTU" secondAttribute="leading" constant="20" id="M4C-AG-31p"/>
+                            <constraint firstItem="xrq-h9-VTU" firstAttribute="bottom" secondItem="6eG-YA-K9i" secondAttribute="bottom" constant="20" id="VKV-hf-pBw"/>
                             <constraint firstItem="6eG-YA-K9i" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="rJ7-2X-Xss"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="yrP-or-1Fg"/>
+                        <viewLayoutGuide key="safeArea" id="xrq-h9-VTU"/>
                     </view>
                     <navigationItem key="navigationItem" id="FGG-Pb-8jW"/>
                 </viewController>
@@ -117,7 +117,7 @@
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="ggN-Y5-jFV"/>
+                        <viewLayoutGuide key="safeArea" id="22M-3N-gKm"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
@@ -188,16 +188,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="sJN-VC-wa1" firstAttribute="trailing" secondItem="OGI-xv-XQY" secondAttribute="trailing" id="0Er-dE-bjw"/>
-                            <constraint firstItem="sJN-VC-wa1" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ll6-pX-8hV" secondAttribute="trailing" id="GV7-rU-AtZ"/>
+                            <constraint firstItem="hcH-Vu-Byc" firstAttribute="trailing" secondItem="OGI-xv-XQY" secondAttribute="trailing" id="0Er-dE-bjw"/>
+                            <constraint firstItem="hcH-Vu-Byc" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ll6-pX-8hV" secondAttribute="trailing" id="GV7-rU-AtZ"/>
                             <constraint firstAttribute="bottom" secondItem="OGI-xv-XQY" secondAttribute="bottom" id="Rc6-EK-dcP"/>
                             <constraint firstItem="OGI-xv-XQY" firstAttribute="top" secondItem="WGh-zW-Ao3" secondAttribute="top" id="Rt9-Y8-XYv"/>
-                            <constraint firstItem="ll6-pX-8hV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="sJN-VC-wa1" secondAttribute="leading" id="cbZ-Sc-HXe"/>
-                            <constraint firstItem="OGI-xv-XQY" firstAttribute="leading" secondItem="sJN-VC-wa1" secondAttribute="leading" id="eES-9y-0j8"/>
-                            <constraint firstItem="ll6-pX-8hV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sJN-VC-wa1" secondAttribute="top" id="ngq-Vy-y0x"/>
-                            <constraint firstItem="sJN-VC-wa1" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ll6-pX-8hV" secondAttribute="bottom" id="xdn-y0-PeJ"/>
+                            <constraint firstItem="ll6-pX-8hV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hcH-Vu-Byc" secondAttribute="leading" id="cbZ-Sc-HXe"/>
+                            <constraint firstItem="OGI-xv-XQY" firstAttribute="leading" secondItem="hcH-Vu-Byc" secondAttribute="leading" id="eES-9y-0j8"/>
+                            <constraint firstItem="ll6-pX-8hV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="hcH-Vu-Byc" secondAttribute="top" id="ngq-Vy-y0x"/>
+                            <constraint firstItem="hcH-Vu-Byc" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ll6-pX-8hV" secondAttribute="bottom" id="xdn-y0-PeJ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="sJN-VC-wa1"/>
+                        <viewLayoutGuide key="safeArea" id="hcH-Vu-Byc"/>
                     </view>
                     <connections>
                         <outlet property="desiredXConstraint" destination="jzP-ND-lGl" id="Uni-py-h2F"/>
